--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,27 @@
 # Usa una imagen base de Python
 FROM python:3.10
 
+# Instalar dependencias del sistema necesarias para OpenCV y ultralytics
+RUN apt-get update && apt-get install -y \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
+    libgomp1 \
+    libgstreamer1.0-0 \
+    libgstreamer-plugins-base1.0-0 \
+    libgtk-3-0 \
+    libgl1 \
+    libgthread-2.0-0 \
+    libqt5gui5 \
+    libqt5core5a \
+    libqt5widgets5 \
+    fonts-liberation \
+    libglib2.0-dev \
+    libfontconfig1 \
+    libxss1 \
+    && rm -rf /var/lib/apt/lists/*
+
 # Define el directorio de trabajo
 WORKDIR /app
 
